fix CapacidadPago - table wrap

--- a/src/pages/Preaprobado/Preaprobado.scss
+++ b/src/pages/Preaprobado/Preaprobado.scss
@@ -559,6 +559,7 @@
   max-height: 70vh;
   overflow: scroll;
   position: relative;
+  flex-wrap: nowrap !important;
   .sticky-table-left {
     position: sticky;
     left: 0;
